nav-bar almost done

--- a/index.html
+++ b/index.html
@@ -52,8 +52,21 @@
                         <button class="login-button">LOG-IN</button>
                     </div>
                 </div>
+                <label class="hamburger-menu">
+                    <input type="checkbox">
+                </label>
+                <aside class="navSideBar">
+                    <nav>
+                        <div>This</div>
+                        <div>is</div>
+                        <div>the</div>
+                        <div>sidebar</div>
+                    </nav>
+                </aside>
             </div>
+            
         </nav>
+        
 
         <!-- nav-bar end -->
     </header>
