--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <!-- nav-bar -->
         <nav class="nav-bar">
             <div class="innerdiv-nav">
@@ -57,10 +57,18 @@
                 </label>
                 <aside class="navSideBar">
                     <nav>
-                        <div>This</div>
-                        <div>is</div>
-                        <div>the</div>
-                        <div>sidebar</div>
+                        <ul class="japanese-section">
+                            <li class="japanese-navSection">フ</li>
+                            <li class="japanese-navSection">ェ</li>
+                            <li class="japanese-navSection">ニ</li>
+                            <li class="japanese-navSection">ッ</li>
+                            <li class="japanese-navSection">ク</li>
+                            <li class="japanese-navSection">ス</li>
+                        </ul>
+                        <div class="dropdown-nav">
+                            
+                        </div>
+                    
                     </nav>
                 </aside>
             </div>
@@ -71,6 +79,9 @@
         <!-- nav-bar end -->
     </header>
     <main>
+        <section class="hero-section">
+
+        </section>
 
     </main>
     <footer>
